--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* Global */ 
 :root {
-	--touch: 100px;
-	--touch-item: 10px;
-	--touch-color: rgb(117, 0, 255);
+	--touch: 10px;
+	--touch-item: 2px;
+	--touch-color: rgba(255, 255, 255, 0.8);
 	--translate: calc(var(--touch) / 2 - var(--touch-item) / 2);
 }
 
@@ -72,7 +72,7 @@ a:hover {
 }
 
 .button-menu {
-	display: flex;
+	display: block;
 	list-style: none;
 	margin: 0;
 	padding: 10px 0 0;
@@ -381,6 +381,7 @@ a:hover {
 	color: #fff;	
 	position: relative;
 	background-repeat: no-repeat;
+	cursor: pointer;
 }
 
 #meals__item__1 {
